# AstroScripts

./: .gitmodules  README.md  SS433_phase  asm_objsun.py  asmfaxbary  chandra_proper_download  fitsplot.py  fitsview.py  gtiplot.py  init.sh  lcrms.py  lctxt2fits  lspower.py  myfits.py  pdsrms.py  pyproject.toml  rms-flux.py  rxteTT2UTC  swift_archive_clone  swift_wget_uk  tmp.py  txtcalc  xmm_mass_preprocess  xmmarchivate.old  xmmcall.sh  xmmevt  xmmflt.py  xmmgeneral.py  xmminfo.py  xmmlc.py  xmmspec.py  zstat.py
astroscripts/: __init__.py  exceptions.py  external.py  extpath.py  fitschecks.py  gtiplot.py  main.py  other.py  plot.py
astroscripts/_internal/: _columnbased.py  columnbased.py  helpers.py  scripts.py
astroscripts/_internal/libexec/fits/: fitsplot.py
astroscripts/_internal/libexec/legacy/: asmfilter  chandra_preview_object.py  ds9.py  kgo_check_xzfits  radec_hms2deg.py
astroscripts/_internal/libexec/swift/: swift_preprocess  swift_wget
astroscripts/_internal/libexec/xmm/: xmmflt  xmminfo  xmminfo.py  xmmlc  (+1 more)
astroscripts/lcurves/: __init__.py  _c_callers.py  _classes.py  _common.py  _loader.py  _rebin.py  core.py  loader.py  prdsearch.c  prdsearch.py  statistics.py
astroscripts/missions/xmm/: common.py  epicfilter.py  epiclc.py  epicspec.py
legacy/: GTIcheck  crcortable  fitsfpower  fps2xsp.py  headerclone  kgo_spec_sort  lc2mat  makexronwin  pws_try.sh  qdp_gen.py  rxtegx  rxtelcnorm  swift_make_lcurve.py  wndsim_old  wndtest  xmmprocdir.py  xsp_atabpack.py
libexec/chandra/: chandra_proper_download
libexec/fits/: fitspack  fitsplot.py  regview.py
libexec/swift/: swift_expmap
libexec/xmm/: xmmflt.py
myfits/: external.py  lcurves.py  main.py  xspec.py
python-packages/astrolib/: __init__.py  lcurves.py  main.py  plot.py
tests/: __init__.py  test_columnbased.py  test_extpath.py  test_helpers.py  test_lcurves_core.py  test_main.py
