[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "astroscripts"
dynamic = ["version"]
dependencies = [
    'numpy',
    'scipy',
    'astropy',
    'matplotlib',
    'pyds9',
    'mypythonlib @ git+https://github.com/katapin/MyPythonLib.git'
]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools]
#package-dir = {"" = "python-packages"}
#packages = ["astroscripts", "astroscripts._internal"]
packages = ["astroscripts"]

[project.scripts]
astroscripts = 'astroscripts._internal.scripts:init'

[tool.setuptools.package-data]
"astroscripts._internal" = ["**"]

[tool.setuptools.exclude-package-data]
"astroscripts" = ["*.pyc"]

